# link

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  README  README.md  biome.json  codegen.yml  cypress.config.ts  eslint.config.js  index.html  link.py  models.py  package-lock.json  package.json  populate.py  pyproject.toml  pytest.ini  requirements.txt  test.py  tsconfig.json  utils.py  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  docker.yml
backend/: app.py  schema.py
backend/__tests__/: test_schema_mutations_friendship.py  test_schema_queries_survey.py  test_schema_queries_user.py
cypress/support/: commands.ts  component-index.html  component.ts
frontend/: App.tsx  main.d.ts  main.tsx
frontend/components/: About.cy.tsx  About.tsx  AddQuestion.cy.tsx  AddQuestion.tsx  CompareIntro.cy.tsx  CompareIntro.tsx  CompareSection.cy.tsx  CompareSection.tsx  ErrorPage.tsx  LoadingPage.tsx  Login.cy.tsx  Login.tsx  OtherResponses.cy.tsx  OtherResponses.module.scss  OtherResponses.tsx  Page.cy.tsx  Page.module.scss  Page.tsx  Section.cy.tsx  Section.tsx  Settings.cy.tsx  Settings.tsx  SurveyDescription.cy.tsx  SurveyDescription.tsx  SurveyItems.cy.tsx  SurveyItems.tsx  SurveyPrivacy.cy.tsx  SurveyPrivacy.tsx  SurveyQuestions.cy.tsx  SurveyQuestions.module.scss  SurveyQuestions.tsx  Tip.cy.tsx  Tip.module.scss  Tip.tsx  UserInfo.cy.tsx  UserInfo.tsx  style.scss
frontend/gql/: fragment-masking.ts  gql.ts  graphql.ts
frontend/pages/: Friends.cye.ts  Friends.module.scss  User.tsx  (+12 more)
static/: light_dark.js  script.js  style.css
templates/: base.mako  compare.html  control.html  friends.html  friends.mako  login.html  others.html  response.html  response.mako  standard.html  survey.html  survey.mako  surveys.html  surveys.mako  user.html  user.mako
(+1 files in other folders)
